# pp

./: .gitignore  AGENTS.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: README.md  i18n-implementation-summary.md  i18n-translation-fixes.md
docs/aiprompts/: README.md  aster-integration.md  commands.md  components.md  converter.md  credential-pool.md  database.md  flow-monitor.md  hooks.md  lib.md  mcp.md  overview.md  plugins.md  providers.md  server.md  services.md  terminal.md
docs/test/: README.md  agent-evaluation.md  e2e-tests.md  integration-tests.md  unit-tests.md
docs/test/test-cases/: agent-tests.md  converter-tests.md  provider-tests.md
scripts/: README.md  extract_remaining_todos.py  import_translations.py  translate_all.py
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.headless.json  tauri.conf.json
src-tauri/crates/infra/: Cargo.toml
src-tauri/crates/infra/src/: lib.rs
src-tauri/crates/infra/src/resilience/: failover.rs  timeout.rs
src-tauri/crates/infra/src/telemetry/: logger.rs  stats.rs  tests.rs  tokens.rs  types.rs
src-tauri/icons/: icon.icns
src-tauri/proptest-regressions/config/: tests.txt
src-tauri/src/: lib.rs  server.rs
src-tauri/tests/: api_key_provider_tests.rs  end_to_end_tests.rs
src/components/: AppSidebar.tsx  WebModeWarning.tsx
src/hooks/: useConfigEvents.ts  useProviderModels.ts  useTauri.ts
src/i18n/: I18nPatchProvider.tsx  config.ts  dom-replacer.ts  text-map.ts  withI18nPatch.tsx
src/i18n/patches/: en.json  (+1 more)
src/lib/: configEventManager.ts  tauri-mock.ts
(+229 files in other folders)
